# zk-torch

./: .gitignore  Cargo.toml  bench_all.py  bench_one.py  bench_util.py  config.yaml  proof_gen.py  sample_fake.json  setup_gen.py  test.py  verif_gen.py
src/: basic_block.rs  g_fft.rs  graph.rs  layer.rs  lib.rs  main.rs  onnx.rs  ptau.rs  python.rs  tests.rs  util.rs
src/basic_block/: add.rs  cq.rs  cqlin.rs  div.rs  mul.rs  ops.rs  reshape.rs
src/layer/: lstm.rs  matmul.rs  max.rs  nonlinear.rs  norm.rs
src/util/: config.rs  poly.rs  prover.rs  verifier.rs
